--- a/src/public/index.html
+++ b/src/public/index.html
@@ -10,6 +10,7 @@
   </head>
   <body>
     <div id="target"></div>
-    <script src="bundle.js"></script>
+    <script src="http://localhost:3000/webpack-dev-server.js"></script>
+    <script src="js/app.js"></script>
   </body>
 </html>
